<resources>
    <string name="app_name">HotelBookingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Bookings History</string>
    <string name="title_account">Account</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_cart">Bookings History</string>
    <string name="menu_account">Account</string>
    <string name="menu_search">Search</string>
    <string name="facebook_application_id" translatable="false">1097629924798297</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1097629924798297</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome_text">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_aut">AutActivity</string>
    <string name="checkin_date_btn">Checkin date</string>
    <string name="welcome_authentication_text">Welcome to My Hotel</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="sign_in_with_google_text">Sign In with Google</string>
    <string name="search_rooms_text">Search Rooms</string>
    <string name="checkout_date_text">Checkout date</string>
    <string name="search_button_text">Search button</string>
    <string name="search_text">Search</string>
    <string name="royal_rooms_text">Royal Rooms</string>
    <string name="luxury_rooms_text">Luxury Rooms</string>
    <string name="image_room_text">Image room</string>
    <string name="_10_off_text">10% OFF</string>
    <string name="rating_5_text">Rating: 5</string>
    <string name="luxury_room_text">Luxury Room</string>
    <string name="_100_per_night_text">100$ / night</string>
    <string name="account_and_security_text">Account and security</string>
    <string name="settings_text">Settings</string>
    <string name="item_title">Item Title</string>
    <string name="string_account">Account</string>
    <string name="my_reviews">My reviews</string>
    <string name="title_activity_show_image">ShowImageActivity</string>
    <string name="google_map_api_key">AIzaSyCjZFIOYN3k8GCE15TMUN4c_lU_LCOwpcY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="conversations">Conversations</string>
    <string name="channel_create_title">New group</string>
    <string name="channel_members_title">Add members</string>
    <string name="select_at_least">At least 1 contact must be selected</string>
    <string name="group_name_hint">Name of the group</string>
    <string name="empty_conversations">No conversations!</string>
    <string name="enter_message_hint">Type your message...</string>
    <string name="send_text">SEND</string>
    <string name="cancel_text">CANCEL</string>
    <string name="ok_text">OK</string>
    <string name="start_text">START</string>
    <string name="no_conversation">You have no conversations</string>
    <string name="search_not_found_for_messages">No conversation found</string>
    <string name="info_broadcast_message">Messages will be broadcast to each recipient individually</string>
    <string name="shareOptions">Share</string>
    <string name="mobitexter_contact_sync_key">KEYMOBITEXTER_CONTACT_SYNC_</string>
    <string name="call_history_display_within_messages_pref_key">CALL_HISTORY_DISPLAY_WITHIN_MESSAGES</string>
    <string name="last_inbox_sync_time">LAST_INBOX_SYNC_TIME</string>
    <string name="last_outbox_sync_time">LAST_OUTBOX_SYNC_TIME</string>
    <string name="phone_number_key">phone_number_key</string>
    <string name="group_sms_freq_key">GROUP_SMS_FREQ_KEY</string>
    <string name="delivery_report_pref_key">DELIVERY_REPORT_ENABLE</string>
    <string name="sent_sms_sync_pref_key">SENT_SMS_SYNC_FLAG</string>
    <string name="received_sms_sync_pref_key">RECEIVED_SMS_SYNC_FLAG</string>
    <string name="verify_contact_number">VERIFY_CONTACT_NUMBER</string>
    <string name="device_key_string">DEVICE_KEY_STRING</string>
    <string name="device_registration_id">DEVICE_REGISTRATION_ID</string>
    <string name="last_sms_sync_time">LAST_SMS_SYNC_TIME</string>
    <string name="last_message_stat_sync_time">LAST_MESSAGE_STAT_SYNC_TIME</string>
    <string name="webhook_enable_key">WEBHOOK_ENABLE_KEY</string>
    <string name="email">EMAIL_ID_VALUE</string>
    <string name="email_verified">EMAIL_VERIFIED</string>
    <string name="user_key_string">SU_USER_KEY_STRING</string>
    <string name="stop_service">STOPSERVICE</string>
    <string name="patch_available">NEWPATCHAVAILABLE</string>
    <string name="update_push_registration">UPDATE_PUSH_REGISTRATION</string>
    <string name="info_sample_contact_list">Populate your app contacts here, showing device contacts as sample</string>
    <string name="info_message_sync">Syncing messages with the server, it might take few minutes!</string>
    <string name="instruction_open_conversation_thread">Tap on any conversation to see full thread</string>
    <string name="instruction_go_back_to_recent_conversation_list">To go back to previous screen, slide from left to right</string>
    <string name="instruction_long_press_message">For delete and other options, long press the message</string>
    <string name="title_activity_mobi_com">MobiComActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_block">Block</string>
    <string name="user_un_block">Unblock</string>
    <string name="applozic_my_profile_option_info">Profile</string>
    <string name="location_services_disabled_message">Sending location requires access to your location. Turn on location access.</string>
    <string name="location_services_disabled_title">Location services disabled</string>
    <string name="location_service_settings">Settings</string>
    <string name="location_sending_cancelled">Location sending canceled</string>
    <string name="unable_to_fetch_location">Unable to fetch location</string>
    <string name="waiting_for_current_location">Waiting for current location</string>
    <string name="select_file">Select a file</string>
    <string name="applozic_select_photo">Select a photo</string>
    <string name="attachment_retry">Retry</string>
    <string name="verification_success">Your phone number got verified successfully</string>
    <string name="launch_mobitexter_app">LAUNCH_MOBITEXTER</string>
    <string name="delete_conversation">Delete</string>
    <string name="delete_conversation_context">Delete conversation</string>
    <string name="sync_messages_from_server">Syncing with the server…</string>
    <string name="incoming_call">Received call</string>
    <string name="outgoing_call">Dialed call</string>
    <string name="welcome_message">Welcome,
        \nMobiTexter is a Messenger &amp; SMS Texting app
        \nText from your laptop, mobile and any Android device using your own phone number.
        \nSend and receive text on the laptop/pc/computer browser from http://www.mobitexter.net/
        \nFor any queries, get in touch with us at support@mobitexter.net</string>
    <string name="info_app_not_found_to_open_file">No application found to open this file</string>
    <string name="unable_to_play_requested_audio_file">No application found to open this file</string>
    <string name="file_not_selected">Did you miss selecting the file?</string>
    <string name="info_attachment_max_allowed_file_size">Can\'t send, maximum uploading file size limit exceeded!</string>
    <string name="info_file_attachment_error">Can\'t send! Some unexpected error occurred while reading file</string>
    <string name="select_file_count_limit">Can\'t select more than 1 file</string>
    <string name="multiple_selection_limit">Max selection limit is: %1$d</string>
    <string name="send_max_limit_files">Send the first %1$d files</string>
    <string name="reselect_files">Reselect files</string>
    <string name="max_media_select_title">File selection limit</string>
    <string name="max_media_select_message">You can only send %1$d files at once.</string>
    <string name="ScheduleText">Schedule</string>
    <string name="enter_mt_message_hint">Write a message…</string>
    <string name="messageOptions">Message options</string>
    <string name="conversation">Conversation</string>
    <string name="conversation_options">Options</string>
    <string name="enter_support_query_hint">enter your queries, bug reporting or feedback here</string>
    <string name="info_message_scheduled">Message is successfully scheduled</string>
    <string name="sync_older_messages">Do you want to sync older messages?</string>
    <string name="dialog_delete_conversation_title">Delete conversation</string>
    <string name="chat_with_us">Chat With Us</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="m_t_kh_ng_gian_nh_n_m_nh_c_nh_b_n_ph_c">A small space hidden next to the ancient town.</string>
    <string name="ch_c_ch_trung_t_m_ph_c_h_i_an_10_ph_t_i_b_ho_c_45_ph_t_i_b_ng_xe_t_t_s_n_bay_qu_c_t_n_ng_hi_m_c_n_i_n_o_c_n_gi_c_v_p_t_nhi_n_nh_la_siesta_hoi_an_resort_amp_spa_n_m_nh_trong_khu_v_n_nhi_t_i_ng_p_tr_n_s_c_xanh_b_n_khung_c_nh_n_n_th_c_a_c_nh_ng_hi_n_ho_khu_ngh_d_ng_nh_m_t_n_i_n_n_u_l_t_ng_gi_p_du_kh_ch_r_i_xa_m_i_b_n_b_c_a_cu_c_s_ng_t_m_v_kh_ng_gian_ri_ng_t_tuy_t_i_v_c_m_nh_n_s_b_nh_y_n_l_ng_ng_trong_t_m_h_n"><![CDATA[Just 10 minutes on foot or 45 minutes by car from Da Nang International Airport, few places still preserve the natural beauty like La Siesta Hoi An Resort & Spa. Hidden in a tropical garden full of greenery, next to the peaceful fields, the resort is an ideal retreat for guests to escape the hustle and bustle of life, finding absolute privacy and feeling the tranquility that settles in the soul.]]></string>
    <string name="s_k_t_h_p_h_i_ho_gi_a_l_i_ki_n_tr_c_hi_n_i_v_v_p_truy_n_th_ng_vi_t_nam_c_ng_n_t_ch_m_ph_bay_b_ng_mang_n_s_tinh_t_trong_t_ng_ng_n_t_thi_t_k_cho_137_c_n_ph_ng_ki_n_tr_c_xanh_k_t_h_p_v_i_n_i_th_t_hi_n_i_b_ng_g_t_ch_s_m_m_u_c_l_m_th_c_ng_s_n_g_nh_b_ng_g_ch_kh_m_hoa_v_n_v_c_c_v_t_li_u_x_y_d_ng_a_ph_ng_mang_n_m_t_tr_i_nghi_m_ngh_d_ng_ng_c_p_gi_a_thi_n_nhi_n">A harmonious combination of modern architecture and traditional Vietnamese beauty, with a whimsical touch that brings sophistication to the design of 137 rooms. The green architecture, combined with modern teak wood interiors, handcrafted, polished wooden floors, mosaic patterned tiles, and local building materials, offers a luxurious experience amidst nature.</string>
    <string name="h_nh_nh">Images</string>
    <string name="_132_h_ng_v_ng_ph_ng_c_m_ph_h_i_an_qu_ng_nam_560000">132 Hung Vuong, Cam Pho Ward, Hoi An, Quang Nam 560000</string>
    <string name="welcome_hotel"><![CDATA[Welcome to La Siesta Hội An Resort & Spa]]></string>
    <string name="location">Location</string>
</resources>