<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    tools:context=".components.account.AccountFragment" >

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/account_and_security_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="8dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/account_and_security_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/account_and_security_recycler_view"
                android:layout_width="match_parent"
                android:padding="8dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/settings_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:padding="8dp"
                android:text="@string/settings_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/settings_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp" />
            <TextView
                android:id="@+id/help_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:padding="8dp"
                android:text="@string/how_can_we_help_you" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:padding="16dp"
                android:background="@drawable/rectangle_shape_2"
                android:radius="12dp"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:backgroundTint="#A6C3F8"
                android:layout_margin="12dp"
                android:text="@string/chat_with_us" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>