<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.xinchaongaymoi.hotelbookingapp.components.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.xinchaongaymoi.hotelbookingapp.components.cart.CartFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_cart"/>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.xinchaongaymoi.hotelbookingapp.components.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_roomDetailFragment"
            app:destination="@id/navigation_room_detail"
            app:popUpTo="@id/navigation_search"
            app:popUpToInclusive="false"/>
        
        <action
            android:id="@+id/action_searchFragment_to_searchResultFragment"
            app:destination="@id/navigation_search_result" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search_result"
        android:name="com.xinchaongaymoi.hotelbookingapp.components.search.SearchResultFragment"
        android:label="Search Results"
        tools:layout="@layout/fragment_search_result">
        
        <action
            android:id="@+id/action_searchResultFragment_to_roomDetailFragment"
            app:destination="@id/navigation_room_detail"
            app:popUpTo="@id/navigation_search_result"
            app:popUpToInclusive="false"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_room_detail"
        android:name="com.xinchaongaymoi.hotelbookingapp.components.search.RoomDetailFragment"
        android:label="Room Detail"
        tools:layout="@layout/fragment_room_detail">
        <argument
            android:name="ROOM_ID"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.xinchaongaymoi.hotelbookingapp.components.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_accountFragment_to_bookingHistoryFragment"
            app:destination="@id/navigation_booking_history"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_booking_history"
        android:name="com.xinchaongaymoi.hotelbookingapp.components.account.BookingHistory"
        android:label="Lịch sử đặt phòng"
        tools:layout="@layout/fragment_booking_history" />
    <fragment
        android:id="@+id/fragmentRoomReviews"
        android:name="com.xinchaongaymoi.hotelbookingapp.components.room.FragmentRoomReviews"
        android:label="Danh gia phong">
        <argument
            android:name="roomId"
            app:argType="string"/>
    </fragment>

    <action
        android:id="@+id/action_roomDetailFragment_to_roomReviewsFragment"
        app:destination="@id/fragmentRoomReviews" />
    <fragment
        android:id="@+id/fragmentReviewsHistory"
        android:label="Reviews History"
        android:name="com.xinchaongaymoi.hotelbookingapp.components.account.ReviewHistoryFragment"
        >
    </fragment>
    <action
        android:id="@+id/action_accountFragment_to_roomReviewsHistoryFragment"
        app:destination="@+id/fragmentReviewsHistory"
    />
</navigation>